Should have logged more, done with sub and times

--- a/index.html
+++ b/index.html
@@ -24,8 +24,24 @@
             <input id="number-2">
 
             <button id="add-button">=</button>
-            <span id="add-numbers"> ? </span>
+            <span id="add-answer"> ? </span>
 
+        </section>
+        <section>
+            <input id="subnumber-1">
+            -
+            <input id="subnumber-2">
+
+            <button id="sub-button">=</button>
+            <span id="sub-answer">?</span>
+        </section>
+        <section>
+            <input id="timesnumber-1">
+            *
+            <input id="timesnumber-2">
+
+            <button id="times-button">=</button>
+            <span id="times-answer">?</span>
         </section>
         
         
