divide DOM done

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
             <button id="times-button">=</button>
             <span id="times-answer">?</span>
         </section>
+        <section>
+            <input id="divnumber-1">
+            /
+            <input id="divnumber-2">
+
+            <button id="div-button">=</button>
+            <span id="div-answer">?</span>
+        </section>
         
         
     </main>
